magistr.dk/overlays/production/middleware.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  labels:
    app.kubernetes.io/name: magistr
spec:
  redirectScheme:
    scheme: https
    permanent: true
