magistr.dk/overlays/production/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magistr
spec:
  template:
    spec:
      containers:
      - name: magistr
